--- a/src/pages/classes.astro
+++ b/src/pages/classes.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "~/layouts/Layout.astro";
+// Change 6 to however many class photos you have
 const images = Array.from({ length: 6 }, (_, i) => `/gallery/class${i+1}.jpg`);
 ---
 
